--- a/forallx-adl-frontmatter.tex
+++ b/forallx-adl-frontmatter.tex
@@ -42,7 +42,7 @@ This book is a derivative work created by Antony Eagle, based upon Tim Button's 
 \end{center}
 
 \begin{quote}
-	{\small This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit \href{https://creativecommons.org/licenses/by/4.0/}{\nolinkurl{creativecommons.org/licenses/by/4.0/}} or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA. 
+	{\small This work is licensed under the Creative Commons Attribution 4.0 International License. To view a copy of this license, visit \href{https://creativecommons.org/licenses/by/4.0/}{\nolinkurl{creativecommons.org/licenses/by/4.0/}} or send a letter to Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.} 
 \end{quote} \medskip
 \vfill
 
