modified readme to include filenames; modified tfl to include non-sentences

--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -61,13 +61,13 @@ This raises another question. What makes those words special? Logicians tend to 
 
 \section{Formal Languages}
 
-In logic, a \define{formal language} is a language which is particularly suited to representing the structure or form of its sentences. Such languages have a precisely defined \define{syntax}, that allows us to specify without difficulty the grammatical sentences of the language, and they also have a precise \define{semantics} which assigns meaning to the sentences. 
+In logic, a \define{formal language} is a language which is particularly suited to representing the structure or form of its sentences. Such languages have a precisely defined \define{syntax}, that allows us to specify without difficulty the grammatical sentences of the language, and they also have a precise \define{semantics} which both tells us what meanings \emph{are} in those languages, and assigns meanings to the sentences and their constituents. 
 
-Formal languages are not the same as natural languages, like English. The languages we will be looking at are much more limited in their expressive power than English, and not subject to ambiguity or imprecision in the way that English is.  But a formal language can be very useful in \emph{representing} or modelling features of natural language. In particular, they are very good at capturing the structure of natural language sentences and arguments. 
+Formal languages are not the same as natural languages, like English. The languages we will be looking at are much more limited in their expressive power than English, and not subject to ambiguity or imprecision in the way that English is.  But a formal language can be very useful in \emph{representing} or modelling features of natural language. In particular, they are very good at capturing the \emph{structure} of natural language sentences and arguments. The semantics we give for such languages reflects that this is their primary use, as you will see. The languages assign fixed meanings only to those expressions which can be used to represent structure.
 
-In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since it will have expressions corresponding to the English sentence connectives `and', `or', `not' and `if …, then …' and `if and only if'. These words a good class to focus on in developing a formal language, because a language with connectives analogous to these makes a good compromise between being useful and being well behaved and easy to study. That language will be called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.)
+In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since it will have expressions corresponding to the English sentence connectives `and', `or', `not' and `if …, then …' and `if and only if'. These words are a good class to focus on in developing a formal language, because languages with connectives analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.)
 
-Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that the language has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure, at least when that structure involves the English sentence connectives `and', `or', `not', `if' and various related expressions.
+Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure – at least when that structure involves the English sentence connectives `and', `or', `not', `if' and various related expressions.
 
 
 We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural. And there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural. 
@@ -77,8 +77,8 @@ But for now, put those tantalising observations out of your mind! We'll focus to
 \section{Atomic sentences}
 A \define{subsentence} of a sentence is a phrase occuring in a sentence which is itself a grammatical sentense. I started isolating the form of an argument, in §\ref{s:ValidityInVirtueOfForm}, by replacing subsentences of sentences with individual placeholder letters. Thus in the first example of this section, `it is raining outside' is a subsentence of `If it is raining outside, then Jenny is miserable', and we replaced this subsentence with `A'. 
 
-Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \emph{atomic sentences}. These will be the basic building blocks out of which more complex sentences are built. We will use upper case italic letters for atomic sentences of \TFL. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider. By adding subscripts to letters, we obtain new atomic sentences. So, here are five different atomic sentences of \TFL:
-	$$A, P, P_{1}, P_{2}, A_{234}.$$
+Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \emph{atomic sentences}. These will be the basic building blocks out of which more complex sentences are built. We will use upper case italic letters for atomic sentences of \TFL. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider. By adding numerical subscripts to letters, we obtain new atomic sentences. Upper case letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
+	$$A, P, P_{1}, P_{2}, A_{234}.$$ 
 
 Atomic sentences are the basic building blocks of \TFL. But what motivates their introduction is the fact that they can be used to represent, or \emph{symbolise}, certain English sentences. To do this, we provide a \define{symbolisation key}, such as the following:
 	\begin{ekey}
@@ -505,11 +505,13 @@ Using this definition, we can easily check to see whether someone is my ancestor
 
 Let's consider some examples.
 
-Suppose we want to know whether or not `$\enot \enot \enot D$' is a sentence of \TFL. Looking at the second clause of the definition, we know that `$\enot \enot \enot D$' is a sentence \emph{if} `$\enot \enot D$' is a sentence. So now we need to ask whether or not `$\enot \enot D$' is a sentence. Again looking at the second clause of the definition, `$\enot \enot D$' is a sentence \emph{if} `$\enot D$' is. Again, `$\enot D$' is a sentence \emph{if} `$D$' is a sentence. Now `$D$' is an atomic sentence of \TFL, so we know that `$D$' is a sentence by the first clause of the definition. So for a compound sentence like `$\enot \enot \enot D$', we must apply the definition repeatedly. Eventually we arrive at the atomic sentences from which the sentence is built up.
+\begin{enumerate}
+	\item Suppose we want to know whether or not `$\enot \enot \enot D$' is a sentence of \TFL. Looking at the second clause of the definition, we know that `$\enot \enot \enot D$' is a sentence \emph{if} `$\enot \enot D$' is a sentence. So now we need to ask whether or not `$\enot \enot D$' is a sentence. Again looking at the second clause of the definition, `$\enot \enot D$' is a sentence \emph{if} `$\enot D$' is. Again, `$\enot D$' is a sentence \emph{if} `$D$' is a sentence. Now `$D$' is an atomic sentence of \TFL, so we know that `$D$' is a sentence by the first clause of the definition. So for a compound sentence like `$\enot \enot \enot D$', we must apply the definition repeatedly. Eventually we arrive at the atomic sentences from which the sentence is built up.
+	\item Next, consider the expression `$\enot (P \eand \enot (\enot Q \eor R))$'. Looking at the second clause of the definition, this is a sentence if `$(P \eand \enot (\enot Q \eor R))$' is. And this is a sentence if \emph{both} `$P$' \emph{and} `$\enot (\enot Q \eor R)$' are sentences. The former is an atomic sentence, and the latter is a sentence if `$(\enot Q \eor R)$' is a sentence. It is. Looking at the fourth clause of the definition, this is a sentence if both `$\enot Q$' and `$R$' are sentences. And both are!
+	\item Suppose we want to know whether `$(A\enot \eor B^{1})$' is a sentence. By the third clause of the definition, this is a sentence iff its two constituents are sentences. The second is not: it consists of an upper case letter and a numerical \emph{superscript}, which is not in conformity with the definition of an atomic sentence. The first isn't either: while it is constructed from an upper case letter and the negation symbol, they are in the wrong order to be a sentence by the first clause of the definition. So the original expression is not a sentence.
+	\item A final example. Consider the expression `$(P \eif \enot(Q \eif P)$'. If this is a sentence, then it's main connective is `\eif', and it was formed from the sentences `$P$' and `$\enot(Q \eif P$'. `$P$' is a sentence because it is a sentence letter. Is `$\enot(Q \eif P$' a sentence? Only if `$(Q \eif P$' is a sentence. But this isn't a sentence; it lacks a closing bracket which would need to be there if this was correctly formed using the clause in the definition covering conditionals. It follows that the expression with which we started isn't a sentence either.
 
-Next, consider the expression `$\enot (P \eand \enot (\enot Q \eor R))$'. Looking at the second clause of the definition, this is a sentence if `$(P \eand \enot (\enot Q \eor R))$' is. And this is a sentence if \emph{both} `$P$' \emph{and} `$\enot (\enot Q \eor R)$' are sentences. The former is an atomic sentence, and the latter is a sentence if `$(\enot Q \eor R)$' is a sentence. It is. Looking at the fourth clause of the definition, this is a sentence if both `$\enot Q$' and `$R$' are sentences. And both are!
-
-A final example. Consider the expression `$(P \eif \enot(Q \eif P)$'. If this is a sentence, then it's main connective is `\eif', and it was formed from the sentences `$P$' and `$\enot(Q \eif P$'. `$P$' is a sentence because it is a sentence letter. Is `$\enot(Q \eif P$' a sentence? Only if `$(Q \eif P$' is a sentence. But this isn't a sentence; it lacks a closing bracket which would need to be there if this was correctly formed using the clause in the definition covering conditionals. It follows that the expression with which we started isn't a sentence either.
+\end{enumerate}
 
 \section{Main Connectives and Scope} 
 
