Added discussion of how to use partial truth tables and reductio to test for validity, etc.

--- a/forallx-adl-interpretations.tex
+++ b/forallx-adl-interpretations.tex
@@ -725,7 +725,7 @@ entailment? & all interpretations & one counter-interpretation\\
 \bottomrule \end{tabular}
 \end{center}
 \label{table.ModelOrArgument}
-This might usefully be compared with the table at the end of §\ref{s:PartialTruthTable}. The key difference resides in the fact that \TFL\ concerns truth tables, whereas \FOL\ concerns interpretations. This difference is deeply important, since each truth-table only ever has finitely many lines, so that a complete truth table is a relatively tractable object. By contrast, there are infinitely many interpretations for any given sentence(s), so that reasoning about all interpretations can be a deeply tricky business. 
+This might usefully be compared with the table at the end of §\ref{s:directPartialTruthTable}. The key difference resides in the fact that \TFL\ concerns truth tables, whereas \FOL\ concerns interpretations. This difference is deeply important, since each truth-table only ever has finitely many lines, so that a complete truth table is a relatively tractable object. By contrast, there are infinitely many interpretations for any given sentence(s), so that reasoning about all interpretations can be a deeply tricky business. 
 
 \keyideas{
 	\item To demonstrate that something is a logical truth or a contradiction, or that an argument is an entailment, involves reasoning about all intepretations.
