--- a/forallx-adl-truthtables.tex
+++ b/forallx-adl-truthtables.tex
@@ -831,8 +831,10 @@ Using shortcuts, determine whether each sentence is a tautology, a contradiction
 
 Sometimes, we do not need to know what happens on every line of a truth table. Sometimes, just a single line or two will do. 
 
+\section{Direct Uses of Partial Truth Tables}\label{s:directPartialTruthTable}
+
 \paragraph{Tautology.} 
-In order to show that a sentence is a tautology, we need to show that it is true on every valuation. That is to say, we need to know that it comes out true on every line of the truth table. So we need a complete truth table. 
+In order to show that a sentence is a tautology, we need to show that it is true on every valuation. That is to say, we need to know that it comes out true on every line of the truth table. So, it seems, we need a complete truth table. 
 
 To show that a sentence is \emph{not} a tautology, however, we only need one line: a line on which the sentence is false. Therefore, in order to show that some sentence is not a tautology, it is enough to provide a single valuation – a single line of the truth table – which makes the sentence false. 
 
@@ -873,7 +875,7 @@ $S$&$T$&$U$&$W$&$(U$&\eand&$T)$&\eif    &$(S$&\eand&$W)$\\
 So we now have a partial truth table, which shows that `$(U \eand T) \eif (S \eand W)$' is not a tautology. Put otherwise, we have shown that there is a valuation which makes `$(U \eand T) \eif (S \eand W)$' false, namely, the valuation which makes `$S$' false, `$T$' true, `$U$' true and `$W$' false. 
 
 \paragraph{Contradiction.}
-Showing that something is a contradiction requires a complete truth table: we need to show that there is no valuation which makes the sentence true; that is, we need to show that the sentence is false on every line of the truth table. 
+Showing that something is a contradiction requires us to consider every row of a complete truth table. We need to show that there is no valuation which makes the sentence true; that is, we need to show that the sentence is false on every line of the truth table. 
 
 However, to show that something is \emph{not} a contradiction, all we need to do is find a valuation which makes the sentence true, and a single line of a truth table will suffice. We can illustrate this with the same example.
 \begin{center}
@@ -892,8 +894,8 @@ $S$&$T$&$U$&$W$&$(U$&\eand&$T)$&\eif    &$(S$&\eand&$W)$\\
 \end{tabular}
 \end{center}
 
-\paragraph{equivalence.}
-To show that two sentences are equivalent, we must show that the sentences have the same truth value on every valuation. So this requires a  complete truth table.
+\paragraph{Equivalence.}
+To show that two sentences are equivalent, we must show that the sentences have the same truth value on every valuation. So this requires us to consider each row of a complete truth table.
 
 To show that two sentences are \emph{not} equivalent, we only need to show that there is a valuation on which they have different truth values. So this requires only a one-line partial truth table: make the table so that one sentence is true and the other false.
 
@@ -903,33 +905,66 @@ To show that some sentences are jointly consistent, we must show that there is a
 To show that some sentences are jointly inconsistent, we must show that there is no valuation which makes all of the sentence true. So this requires a complete truth table: You must show that on every row of the table at least one of the sentences is false.
 
 \paragraph{Validity.}
-To show that an argument is valid, we must show that there is no valuation which makes all of the premises true and the conclusion false. So this  requires a complete truth table.  (Likewise for entailment.)
+To show that an argument is valid, we must show that there is no valuation which makes all of the premises true and the conclusion false. So this  requires us to consider all valuations in a complete truth table.  (Likewise for entailment.)
 
 To show that argument is \emph{invalid}, we must show that there is a valuation which makes all of the premises true and the conclusion false. So this requires only a one-line partial truth table on which all of the premises are true and the conclusion is false. (Likewise for a failure of entailment.)
 
 
 
-This table summarises what is required to test for our various semantic notions:
+This table summarises what is required to directly construct valuations demonstrating the presence of absence of various semantic notions:
 \begin{center}
 \begin{tabular}{l l l} \toprule 
 %\cline{2-3}
  & \textbf{Yes} & \textbf{No}\\
  \midrule
 %\cline{2-3}
-tautology? & complete truth table & one-line partial truth table\\
-contradiction? &  complete truth table  & one-line partial truth table\\
-%contingent? & two-line partial truth table & complete truth table\\
-equivalent? & complete truth table & one-line partial truth table\\
-consistent? & one-line partial truth table & complete truth table\\
-valid? & complete truth table & one-line partial truth table\\
-entailment? & complete truth table & one-line partial truth table\\
-\bottomrule \end{tabular}
+tautology? & all valuations: complete truth table & one valuation: one-line partial truth table\\
+contradiction? &  all valuations: complete truth table  & one valuation: partial truth table\\
+equivalent? & all valuations: complete truth table & one valuation: partial truth table\\
+consistent? & one valuation: partial truth table & all valuations: complete truth table\\
+valid? & all valuations: complete truth table & one valuation: partial truth table\\
+entailment? & all valuations: complete truth table & one valuation: partial truth table\\
+\bottomrule \label{table.CompleteVsPartial}\end{tabular}
 \end{center}
-\label{table.CompleteVsPartial}
+
+
+\section{Indirect Uses of Partial Truth Tables}
+
+We just saw how to use partial truth tables to directly construct a valuation which demonstrates that an argument is invalid, or that some sentences are consistent, etc.
+
+But it turns out we can use the method of partial truth tables in an indirect way to also evaluate arguments for validity or sentences for inconsistency. The idea is this: we attempt to construct a partial truth table showing that the argument is invalid, and \emph{if we fail}, we can conclude that the argument is in fact valid.
+
+So consider showing that an argument is invalid, which we just saw requires only a one-line partial truth table on which all of the premises are true and the conclusion is false. So consider an attempt to show this argument invalid: $(P\eand R), (Q \eiff P) \ttherefore Q$. We construct a partial truth table, and attempt to construct a valuation which makes all the premises true and the conclusion false:  
+\begin{center}
+\begin{tabular}{c c c |d e f d e f d} \toprule 
+$P$ & $Q$ & $R$ & $(P$ & $\eand$ & $R)$ & $(Q$ & $\eiff$ & $P)$ & $Q$\\
+\midrule
+ & F &  &  &  \TTbf{T} &    &   &\TTbf{T}&   &    \TTbf{F}\\\bottomrule
+\end{tabular}
+\end{center}
+Looking at the second premise, if we are to construct this valuation we need to make $P$ false: the premise is true, so both constituents have to have the same truth value, and $Q$ is false by assumption in this valuation:\begin{center}
+\begin{tabular}{c c c |d e f d e f d} \toprule 
+$P$ & $Q$ & $R$ & $(P$ & $\eand$ & $R)$ & $(Q$ & $\eiff$ & $P)$ & $Q$\\
+\midrule
+ & F &  &  &  \TTbf{T} &    & F  &\TTbf{T}& F  & \TTbf{F}\\\bottomrule
+\end{tabular}
+\end{center} But looking at the first premise, we see that both $P$ and $R$ have to be true to make this conjunction true:
+\begin{center}\begin{tabular}{c c c |d e f d e f d} \toprule 
+$P$ & $Q$ & $R$ & $(P$ & $\eand$ & $R)$ & $(Q$ & $\eiff$ & $P)$ & $Q$\\
+\midrule
+\TTbf{??} & F & T & T &  \TTbf{T} &  T  & F  &\TTbf{T}& F  & \TTbf{F}\\\bottomrule
+\end{tabular}
+\end{center} The truth of the first premise (given the other assumptions) has to make $P$ true, but the truth of the second (given the other assumptions) has to make $P$ false. So: \emph{there is no coherent way of assigning a truth value to $P$ so as to make this argument invalid.} (This is marked by the `??' in the partial truth table.) Hence, it is valid.
+
+I call this an \define{indirect} use of partial truth tables. We do not construct the valuations which actually demonstrate the presence or absence of a semantic property of an argument or set of sentences. Rather, we show that the assumption that there is a valuation that meets a certain condition is not coherent. So in the above case, we conclude that nowhere among the 8 lines of the complete truth table for that argument is one that makes the premises true and the conclusion false.
+
+This procedure works because our partial truth table test is guaranteed to succeed in demonstrating the absence of validity, for an invalid argument. Accordingly, if our test fails to demonstrate the absence of validity, that must be because the argument is in fact valid. 
+
 
 \keyideas{
 	\item A partial truth table is a way to reverse engineer a valuation, given a truth value for a sentence.
 	\item Partial truth tables can be effective tests for the absence of most of the semantic properties of sentences and arguments; and they can provide a test for the presence of consistency in some sentences.
+	\item We can also use partial truth tables indirectly to test for the presence of semantic properties of sentences and arguments, by showing that those properties cannot be absent. 
 }
 \newpage
 \practiceproblems
