--- a/forallxadl.tex
+++ b/forallxadl.tex
@@ -32,7 +32,7 @@ This book has been designed for use in conjunction with the University of Adelai
 	\item Each chapter in the book concludes with a box labelled `Key Ideas in §$n$'. These are not a summary of the chapter, but contain some indication of what I regard as the main ideas that you should be taking away from your reading of the chapter. 
 	\item The book is the product of a number of authors. `I' doesn't always mean me, but `you' mostly means you, the reader, and `we' mostly means you and me.
 \end{itemize}
-I appreciate any comments or corrections you may have: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
+I appreciate any comments or corrections: \href{mailto:antony.eagle@adelaide.edu.au}{\nolinkurl{antony.eagle@adelaide.edu.au}}.
 
 \mainmatter
 \include{forallx-adl-what}
