--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -53,11 +53,11 @@ The examples illustrate the idea of validity – conclusiveness in virtue of str
 
 
 
-\section{Identifying Argument Structure}
+\section{Identifying Argument Structure}\label{ss.idargstr}
 
 How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}. In the examples above, we removed all details of the arguments except for the special words `and', `or', `not' and `if …, then …', and replaced the other phrases in the argument by placeholder letters `A', `B', etc. (We were careful to replace the same phrase by the same placeholder.)
 
-This raises another question. What makes those words special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. But there are practical reasons why the words I've already highlighted are useful ones, that I will now discuss.
+This raises another question. What makes those words special? Logicians tend to take a pragmatic attitude to this question. They say: \emph{nothing}! If you had chosen different words, you would have come up with a different structure. But there are practical reasons why the words I've already highlighted are useful ones, which I will now discuss.
 
 \section{Formal Languages}
 
@@ -70,7 +70,7 @@ In this chapter we will begin developing a formal language which will allow us t
 Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure – at least when that structure involves the English sentence connectives `and', `or', `not', `if' and various related expressions.
 
 
-We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural. And there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural. 
+We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural – see also §\ref{s:MoreMonadic}. And there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural. 
 
 But for now, put those tantalising observations out of your mind! We'll focus to begin with on the language \TFL, and on how we can use it to model arguments in English featuring some particular structural words, including those we've just highlighted above. 
 
